@@ -1,6 +1,8 @@
 package com.iems.documentservice.service;
 
+import com.iems.documentservice.client.AiServiceFeignClient;
 import com.iems.documentservice.client.ProjectServiceFeignClient;
+import com.iems.documentservice.dto.request.AiIndexCommandRequest;
 import com.iems.documentservice.dto.response.ProjectDocumentResponse;
 import com.iems.documentservice.entity.ProjectDocument;
 import com.iems.documentservice.exception.AppException;
@@ -17,48 +19,45 @@ import java.io.InputStream;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class ProjectDocumentService {
 
-    private static final long MAX_UPLOAD_SIZE = 50L * 1024 * 1024; // 50 MB
+    private static final long MAX_UPLOAD_SIZE = 50L * 1024 * 1024;
+    private static final String DEFAULT_DOCS_FOLDER_NAME = "docs";
 
     private final ProjectDocumentRepository projectDocumentRepository;
     private final ProjectServiceFeignClient projectServiceFeignClient;
     private final ObjectStorageService objectStorageService;
     private final PermissionHelper permissionHelper;
+    private final AiServiceFeignClient aiServiceFeignClient;
 
-    // ────────── ACCESS CHECK ──────────
-
-    /**
-     * Verify the current JWT user is a member of the project.
-     * Throws PERMISSION_DENIED (403) if not.
-     */
     private void requireProjectMember(UUID projectId) {
         try {
             projectServiceFeignClient.checkMembership(projectId);
-        } catch (FeignException.Forbidden | FeignException.Unauthorized e) {
-            throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         } catch (FeignException e) {
-            log.warn("Membership check failed for project {}: {}", projectId, e.getMessage());
             throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         }
     }
-
-    // ────────── LIST ──────────
 
     public List<ProjectDocumentResponse> listDocuments(UUID projectId) {
         requireProjectMember(projectId);
         return projectDocumentRepository.findByProjectIdOrderByCreatedAtDesc(projectId)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ────────── FOLDER OPERATIONS ──────────
+    public List<ProjectDocumentResponse> listEmbeddableDocuments(UUID projectId) {
+        requireProjectMember(projectId);
+        return projectDocumentRepository
+                .findByProjectIdAndAllowEmbeddedTrueAndAiIndexedTrueAndIsFolderFalseOrderByCreatedAtDesc(projectId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
 
     @Transactional
     public ProjectDocumentResponse createFolder(UUID projectId, String name, UUID parentId) {
@@ -78,6 +77,28 @@ public class ProjectDocumentService {
     }
 
     @Transactional
+    public ProjectDocumentResponse initDefaultDocsFolder(UUID projectId) {
+        requireProjectMember(projectId);
+
+        return projectDocumentRepository
+                .findFirstByProjectIdAndIsFolderTrueAndParentIdIsNullAndFileNameIgnoreCase(projectId,
+                        DEFAULT_DOCS_FOLDER_NAME)
+                .map(this::toResponse)
+                .orElseGet(() -> {
+                    UUID userId = permissionHelper.getCurrentUserId();
+                    ProjectDocument docsFolder = projectDocumentRepository.save(ProjectDocument.builder()
+                            .projectId(projectId)
+                            .fileName(DEFAULT_DOCS_FOLDER_NAME)
+                            .isFolder(true)
+                            .parentId(null)
+                            .uploadedBy(userId)
+                            .createdAt(OffsetDateTime.now())
+                            .build());
+                    return toResponse(docsFolder);
+                });
+    }
+
+    @Transactional
     public ProjectDocumentResponse renameDocument(UUID projectId, UUID docId, String newName) {
         requireProjectMember(projectId);
         ProjectDocument doc = projectDocumentRepository.findByProjectIdAndId(projectId, docId)
@@ -85,6 +106,30 @@ public class ProjectDocumentService {
 
         doc.setFileName(newName);
         return toResponse(projectDocumentRepository.save(doc));
+    }
+
+    @Transactional
+    public ProjectDocumentResponse setAllowEmbedded(UUID projectId, UUID docId, boolean allowEmbedded) {
+        requireProjectMember(projectId);
+        ProjectDocument doc = projectDocumentRepository.findByProjectIdAndId(projectId, docId)
+                .orElseThrow(() -> new AppException(DocumentErrorCode.FILE_NOT_FOUND));
+
+        if (Boolean.TRUE.equals(doc.getIsFolder())) {
+            throw new AppException(DocumentErrorCode.INVALID_REQUEST);
+        }
+
+        boolean wasPreviouslyEmbedded = Boolean.TRUE.equals(doc.getAllowEmbedded());
+        doc.setAllowEmbedded(allowEmbedded);
+        doc.setAiIndexed(allowEmbedded && isRagSupported(doc));
+        ProjectDocument savedDoc = projectDocumentRepository.save(doc);
+
+        if (!wasPreviouslyEmbedded && allowEmbedded) {
+            dispatchIndex(savedDoc);
+        } else if (wasPreviouslyEmbedded && !allowEmbedded) {
+            dispatchDeindex(savedDoc);
+        }
+
+        return toResponse(savedDoc);
     }
 
     @Transactional
@@ -97,12 +142,12 @@ public class ProjectDocumentService {
         return toResponse(projectDocumentRepository.save(doc));
     }
 
-    // ────────── UPLOAD ──────────
-
     @Transactional
-    public ProjectDocumentResponse uploadDocument(UUID projectId, UUID folderId, MultipartFile file) throws Exception {
+    public ProjectDocumentResponse uploadDocument(UUID projectId,
+            UUID folderId,
+            MultipartFile file,
+            boolean allowEmbedded) throws Exception {
         requireProjectMember(projectId);
-
         UUID userId = permissionHelper.getCurrentUserId();
 
         if (file.getSize() > MAX_UPLOAD_SIZE) {
@@ -114,22 +159,39 @@ public class ProjectDocumentService {
             objectStorageService.upload(objectKey, in, file.getSize(), file.getContentType());
         }
 
+        boolean ragSupported = isRagSupported(file.getOriginalFilename(), file.getContentType());
         ProjectDocument doc = projectDocumentRepository.save(ProjectDocument.builder()
                 .projectId(projectId)
                 .parentId(folderId)
-                .fileId(UUID.randomUUID()) // internal tracking id
+                .fileId(UUID.randomUUID())
                 .fileName(file.getOriginalFilename())
                 .fileSize(file.getSize())
                 .fileType(file.getContentType())
                 .uploadedBy(userId)
                 .cloudinaryPath(objectKey)
                 .createdAt(OffsetDateTime.now())
+                .allowEmbedded(allowEmbedded)
+                .aiIndexed(allowEmbedded && ragSupported)
                 .build());
+
+        log.info(
+                "Uploaded document id={} projectId={} fileName={} fileType={} allowEmbedded={} ragSupported={} aiIndexed={}",
+                doc.getId(),
+                projectId,
+                doc.getFileName(),
+                doc.getFileType(),
+                allowEmbedded,
+                ragSupported,
+                doc.getAiIndexed());
+
+        if (allowEmbedded && ragSupported) {
+            dispatchIndex(doc);
+        } else if (allowEmbedded) {
+            log.info("Skip INDEX dispatch for doc {} because file is not RAG supported", doc.getId());
+        }
 
         return toResponse(doc);
     }
-
-    // ────────── DELETE ──────────
 
     @Transactional
     public void deleteDocument(UUID projectId, UUID docId) throws Exception {
@@ -139,29 +201,12 @@ public class ProjectDocumentService {
                 .orElseThrow(() -> new AppException(DocumentErrorCode.FILE_NOT_FOUND));
 
         UUID userId = permissionHelper.getCurrentUserId();
-        // Only uploader can delete (members can delete their own uploads)
         if (!doc.getUploadedBy().equals(userId)) {
             throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         }
 
         deleteRecursive(projectId, doc);
     }
-
-    private void deleteRecursive(UUID projectId, ProjectDocument doc) throws Exception {
-        if (Boolean.TRUE.equals(doc.getIsFolder())) {
-            List<ProjectDocument> children = projectDocumentRepository.findByProjectIdAndParentId(projectId, doc.getId());
-            for (ProjectDocument child : children) {
-                deleteRecursive(projectId, child);
-            }
-        } else {
-            if (doc.getCloudinaryPath() != null) {
-                objectStorageService.delete(doc.getCloudinaryPath());
-            }
-        }
-        projectDocumentRepository.delete(doc);
-    }
-
-    // ────────── DOWNLOAD LINK ──────────
 
     public ProjectDocumentResponse getDownloadLink(UUID projectId, UUID docId) throws Exception {
         requireProjectMember(projectId);
@@ -173,7 +218,60 @@ public class ProjectDocumentService {
         return toResponse(doc, presignedUrl);
     }
 
-    // ────────── HELPERS ──────────
+    private void deleteRecursive(UUID projectId, ProjectDocument doc) throws Exception {
+        if (Boolean.TRUE.equals(doc.getIsFolder())) {
+            List<ProjectDocument> children = projectDocumentRepository.findByProjectIdAndParentId(projectId,
+                    doc.getId());
+            for (ProjectDocument child : children) {
+                deleteRecursive(projectId, child);
+            }
+        } else {
+            if (Boolean.TRUE.equals(doc.getAiIndexed())) {
+                dispatchDeindex(doc);
+            }
+            if (doc.getCloudinaryPath() != null) {
+                objectStorageService.delete(doc.getCloudinaryPath());
+            }
+        }
+        projectDocumentRepository.delete(doc);
+    }
+
+    private void dispatchIndex(ProjectDocument doc) {
+        try {
+            String downloadUrl = objectStorageService.presignGetUrl(doc.getCloudinaryPath());
+            log.info("Dispatch INDEX docId={} projectId={} fileName={} fileType={} urlPresent={}",
+                    doc.getId(),
+                    doc.getProjectId(),
+                    doc.getFileName(),
+                    doc.getFileType(),
+                    downloadUrl != null && !downloadUrl.isBlank());
+            aiServiceFeignClient.dispatchIndexCommand(AiIndexCommandRequest.builder()
+                    .projectId(doc.getProjectId().toString())
+                    .documentId(doc.getId().toString())
+                    .operation("INDEX")
+                    .fileName(doc.getFileName())
+                    .fileType(doc.getFileType())
+                    .downloadUrl(downloadUrl)
+                    .build());
+            log.info("Dispatch INDEX completed for doc {}", doc.getId());
+        } catch (Exception e) {
+            log.warn("Failed to dispatch INDEX for doc {}: {}", doc.getId(), e.getMessage());
+        }
+    }
+
+    private void dispatchDeindex(ProjectDocument doc) {
+        try {
+            log.info("Dispatch DEINDEX docId={} projectId={}", doc.getId(), doc.getProjectId());
+            aiServiceFeignClient.dispatchIndexCommand(AiIndexCommandRequest.builder()
+                    .projectId(doc.getProjectId().toString())
+                    .documentId(doc.getId().toString())
+                    .operation("DEINDEX")
+                    .build());
+            log.info("Dispatch DEINDEX completed for doc {}", doc.getId());
+        } catch (Exception e) {
+            log.warn("Failed to dispatch DEINDEX for doc {}: {}", doc.getId(), e.getMessage());
+        }
+    }
 
     private ProjectDocumentResponse toResponse(ProjectDocument doc) {
         return toResponse(doc, null);
@@ -192,10 +290,30 @@ public class ProjectDocumentService {
                 .downloadUrl(downloadUrl)
                 .isFolder(doc.getIsFolder())
                 .parentId(doc.getParentId())
+                .allowEmbedded(doc.getAllowEmbedded())
+                .aiIndexed(doc.getAiIndexed())
                 .build();
     }
 
     private String buildProjectObjectKey(UUID projectId, String fileName) {
         return "document/projects/" + projectId + "/" + System.currentTimeMillis() + "-" + fileName;
+    }
+
+    private boolean isRagSupported(ProjectDocument doc) {
+        return isRagSupported(doc.getFileName(), doc.getFileType());
+    }
+
+    private boolean isRagSupported(String fileName, String fileType) {
+        String normalizedFileName = fileName != null ? fileName.toLowerCase() : "";
+        String normalizedFileType = fileType != null ? fileType.toLowerCase() : "";
+        return normalizedFileName.endsWith(".txt")
+                || normalizedFileName.endsWith(".pdf")
+                || normalizedFileName.endsWith(".docx")
+                || normalizedFileType.contains("text")
+                || normalizedFileType.contains("pdf")
+                || normalizedFileType.contains("wordprocessingml")
+                || normalizedFileType.contains("json")
+                || normalizedFileType.contains("xml")
+                || normalizedFileType.contains("markdown");
     }
 }
